Added external tag for Smartcat projects and supported Drupal 10

--- a/tmgmt_smartcat.info.yml
+++ b/tmgmt_smartcat.info.yml
@@ -2,7 +2,7 @@ name: 'Smartcat translator'
 description: 'Smartcat translator plugin for TMGMT module. For details, visit <a href="https://developer.smartcat.com">developer.smartcat.com</a>!'
 package: 'Translation Management'
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 dependencies:
   - tmgmt (>=8.x-1.0-rc2)
   - tmgmt_file
