--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
     },
     "require": {
         "php": ">=7.4",
-        "guzzlehttp/guzzle": "^6.0"
+        "guzzlehttp/guzzle": "^6.0|^7.0"
     }
 }
